# wth

./: .gitignore  go.mod  main.go
caddy/: caddy.go  config.go
cmd/: main.go
cmd/internal/: commands.go
cmd/internal/cli/: commands.go
files/: config.ini  go.mod  go.sum  main.go
files/frontend/: package-lock.json  package.json  vue.config.js
files/test/: bfmSimple-26-7-2024-05.57.05.json  bfmSimple.json  config.json  config_pew.json
fileserver/: config.ini  go.mod  readini.sh
fileserver/cmd/: main.go
fileserver/templates/: archive_viewer.html  edit.html  edit1.html  embed.go  list_directory.html  upload_form.html
fileserver/uploads/: config.json  main.go
filesrust/: Cargo.toml
filesrust/src/: main.rs
main/: main.go
main/caddy/: caddy.go  config.go
run/: config.ini  go.mod  go.sum  main.go
run/cmd/: api.go  execute.go  list.go
run/frontend/: package-lock.json  vue.config.js
run/internal/: api.go  config.go  utils.go  watcher.go
run/static/: index.html  index_old.html
runrust/: Cargo.toml  config.ini
runrust/frontend/src/: App.vue
runrust/src/: main.rs
runs/: config.ini  go.mod  go.sum  main.go
runs/frontend/: package-lock.json
sbx/: go.mod  go.sum  main.go
sbx/commands/: install.go
singconf/: go.mod  in.json  main.go
singconf/config/: config.go  sing-box.go
singconfig/: go.mod  main.go
singconfig/config/: config.go
stats/: go.mod  go.sum  main.go
sysinfo/: go.mod  go.sum  main.go  package-lock.json
sysinfo/frontend/: package-lock.json  package.json
wth/: go.mod
wth/main/: main.go
wth/main/menu/: caddy.go  (+3 more)
(+129 files in other folders)
