[package]
name = "runrust"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-ini = "0.21.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
actix-web = "4.9.0"
tokio = { version = "1.40.0", features = ["full"] }
once_cell = "1.20.2"
log = "0.4.22"
thiserror = "1.0.64"
clap = { version = "4.5.19", features = ["derive"] }
config = "0.14.0"
futures = "0.3.31"
actix-files = "0.6.6"
rust-embed = "8.5.0"
mime_guess = "2.0.5"
chrono = "0.4.38"
env_logger = "0.11.5"
